using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace webShop.BussinessLogic.Interfaces
{
     public interface IPaymentMethod
     {
          public string ProcessPayment();
     }
}
