using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace webShop.Domain.Enums
{
     public enum PaymentMethod
     {
          Cash,
          ApplePay,
          PayPal,
          CreditCard
     }
}
